@@ -2,6 +2,10 @@
 
 Changes with Apache 2.3.11
 
+  *) mod_cache: When a request other than GET or HEAD arrives, we must
+     invalidate existing cache entities as per RFC2616 13.10. PR 15868.
+     [Graham Leggett]
+
   *) modules: Fix many modules that were not correctly initializing if they
      were not active during server startup but got enabled later during a
      graceful restart. [Stefan Fritsch]
